--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
       "migrations": "tsnd ./src/migrations/createPokemonTable.ts"
    },
    "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "jsonwebtoken": "^8.5.1",
+      "uuid": "^8.3.2",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
@@ -14,6 +17,9 @@
    },
    "devDependencies": {
       "nodemon": "^2.0.15",
+      "@types/bcryptjs": "^2.4.2",
+      "@types/jsonwebtoken": "^8.5.5",
+      "@types/uuid": "^8.3.1",
       "@types/cors": "^2.8.12",
       "@types/express": "^4.17.7",
       "@types/knex": "^0.16.1",
